                W I N G   C H A N G E S
----------------------------------------------------------
This file tracks the changes to Wing over time. Especially
with respect to new features and compatibility changes.
==========================================================

2015-08-07
 * Added the trends system to track stats over time.

2015-07-22
 * Added call() to objectManager in wing.angular.js to allow for methods that should automatically update the object that are not part of CRUD.
 * Fixed a problem with the auto generated templates instructing to call .list() instead of .all()
 * Added named_options option to generate_all_relationships() to be passed into individual generate_relationship() calls in Wing::Rest.
 * Added queryable option to generate_relationship() in Wing::Rest.
 * Better redirect on templated class index.tt to edit.tt.

2015-07-14
 * Added an option to objectListManager fetch() to prepend an item.

2015-06-30
 * Now requires Imager and Image::ExifTool and File::Temp
 * Added Wing::Role::Result::S3Image

2015-06-29
 * Now requires pQuery and Data::OpenGraph.
 * Added Wing::ContentFilter

2015-06-26
 * wing.angular.js objectListManager search() now uses then() instead of success() and returns its results to be compatible with bootstrap ui typeahead.

2015-06-23
 * wing db --prep now automatically adds charset and collate options to table generation.
 * Added view_uri and edit_uri to make it easier for folks to template stuff.

2015-06-22
 * Better debug when an object is not found via fetch_object.
 * Added Wing::TestHelper
 * Added wing class --test=MyClass test generator

2015-06-21
 * Added fetch_creation_options() to objectListManager in wing.angular.js.
 * Wing defaultly uses wing.angular.js now in its templates.

2015-05-10
 * Fix an IE cache issue in wing.angular.js.

2015-04-23
 * Added the "cache" module to Wing::Command so you can get, set, and remove items in the cache from the command line.

2015-04-12